--- a/src/components/Feedback/Feedback.module.css
+++ b/src/components/Feedback/Feedback.module.css
@@ -2,4 +2,15 @@
     display: flex;
     flex-direction: column;
     align-items: start;
+    gap: 10px;
+}
+p{
+    padding: 0;
+    margin: 0;
+}
+p:nth-last-child(2){
+margin-top: 30px;
+}
+p:last-child{
+    margin-top: 10px;
 }
