--- a/src/components/Options/Options.module.css
+++ b/src/components/Options/Options.module.css
@@ -5,21 +5,26 @@
     margin-top: 30px;
 }
 button{
-    width: 100px;
+    width: 120px;
 }
 .goodBtn{
     background-color: lawngreen;
+    font-size: large;
     border: none;
 }
 .neutralBtn{
     background-color: aqua;
     border: none;
+    font-size: large;
 }
 .badBtn{
     background-color: red;
     border: none;
+    font-size: large;
 }
 .resetBtn{
+    margin-left: 40px;
     background-color: lightslategray;
     border: 3px solid darkblue;
+    font-size: large;
 }
